# DX12Raytracer

./: .gitignore  CMakeLists.txt  CleanCmakeData.ps1
assets/: Cube.fbx
assets/shaders/: Butterflies.glsl  Butterflies.hlsl  RayShader.hlsl  RaytracingHlslCompat.h  landelare.hlsl  screenShader.hlsl
src/: main.cpp
src/App/: ShaderInputWindow.cpp  ShaderInputWindow.h  Win32App.cpp  Win32App.h
src/App/Renderer/: AccelerationStructure.cpp  AccelerationStructure.h  Camera.cpp  Camera.h  Device.h  RaytracingPipeline.cpp  RaytracingPipeline.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Utils.h
src/DX12/: Device.cpp  Device.h  Renderer.cpp
src/DX12Renderer/: AccelerationStructure.cpp  AccelerationStructure.h  CommandAllocator.h  Device.cpp  Device.h  RaytracingPipeline.cpp  RaytracingPipeline.h  Renderer.cpp  Renderer.h  ShaderCompiler.cpp  ShaderCompiler.h
src/Renderer/Private/: DX12Device.cpp
src/Renderer/Public/: DX12Device.h
